2012-07-30 John Wu <John dot Wu at ACM dot org>
	* src/i*.cpp: add statements to check for empty data partitions
	before attempting to build indexes (to address a problem reported
	by Greg Barker)
	* src/part.cpp: in part::init replace the raw pointer pname to a
	std::string to avoid memory leak issue brought up by Petr Kramolis

2012-07-28 John Wu <John dot Wu at ACM dot org>
	* src/ibin.cpp:4342 comment out the line that intended to skip
	"<binning " (it has been done on line 4325
	* src/*.cpp: change all atof to strtod
	* src/qExpr.cpp, src/util.cpp: change the use of
	FASTBIT_CASE_SENSITIVE_COMPARE to be consistent with category.cpp
	and disctionary.cpp - address the problem of inconsistent case
	folding
	* examples/ibis.cpp: replace the alias _0 with cnt in
	randomQueries

2012-07-27 John Wu <John dot Wu at ACM dot org>
	* src/tafel.cpp:3011-3013 comment out the code that skips the next
	delimiter because the readString and friends have done it already
	* src/column.cpp:597 make sure jtmp is less then string length
	* src/index.cpp: change dataFileName and indexFileName to use
	ibis::column::dataFileName
	* src/whereParser.yy: change CONTAINS operator to be in-fix
	similar to the IN operator
	* src/table.h, src/tab.h, src/bord.h, src/mensa.h: add function to
	retrieve data as ibis::opaque
	* src/column.h, src/category.h: add getOpaque, change getString to
	return an int

2012-07-26 John Wu <John dot Wu at ACM dot org>
	* src/column.cpp:225 add case to explicit handle "unsigned" and
	"unsigned int"
	* src/ikeywords.h, src/ikeywords.cpp: add function reorderTerms
	* src/part.h, src/part.cpp: rename lookforString to stringSearch
	to match the named used in ibis::column, add functions
	keywordSearch
	* src/column.h, src/column.cpp: add two variations of
	keywordSearch that takes a list of keywords (for handling
	ibis::qAllWords)
	* src/util.h: change FASTBIT_CS_PATTERN_MATCH to
	FASTBIT_CASE_SENSITIVE_COMPARE and change string comparisons in